# pvr.freebox

./: .travis.yml  CMakeLists.txt  Findnlohmann_json.cmake  LICENSE  README.md  appveyor.yml
.github/workflows/: build.yml  changelog-and-release.yml  increment-version.yml  release.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/nlohmann-json/: flags.txt  nlohmann-json.sha256  nlohmann-json.txt
depends/common/openssl/: 01-android.patch  CMakeLists.txt  openssl.sha256  openssl.txt
depends/common/rapidjson/: flags.txt  rapidjson.txt
depends/common/tinyxml/: CMakeLists.txt
depends/windows/openssl/: 01-quote-cc.patch  CMakeLists.txt  openssl.sha256  openssl.txt
depends/windows/strawberryperl/: CMakeLists.txt
depends/windowsstore/openssl/: CMakeLists.txt
pvr.freebox/: addon.xml.in
pvr.freebox/resources/: settings.xml
pvr.freebox/resources/language/resource.language.en_gb/: strings.po
pvr.freebox/resources/language/resource.language.fr_fr/: strings.po
src/: Freebox.cpp  Freebox.h  PVRFreeboxData.cpp  PVRFreeboxData.h  client.cpp  client.h
